<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
                name="viewModel"
                type="com.persadaditya.app.ui.launch.search.SearchViewModel" />
    </data>


    <FrameLayout android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="@dimen/margin_normal"
            tools:context="com.persadaditya.app.ui.launch.search.SearchFragment">

        <TextView
                android:id="@+id/tv_no_data"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/margin_40"
                android:gravity="center"
                android:text="@string/search_no_data"
                />

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/app_name"
                    android:layout_marginTop="@dimen/margin_40"
                    style="@style/TextAppearance.AppCompat.Display1"
                    android:layout_marginBottom="@dimen/margin_normal"
                    />

            <EditText
                    android:id="@+id/et_search"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bg_edit_text"
                    android:drawableStart="@drawable/ic_baseline_search_24"
                    android:hint="@string/search_hint"
                    android:paddingHorizontal="@dimen/margin_small"
                    android:drawablePadding="@dimen/margin_normal"
                    android:afterTextChanged="@{(editable)->viewModel.afterSearchTextChanged(editable)}"
                    android:imeOptions="actionSearch"
                    android:onEditorAction="@{(view,actionId,event) -> viewModel.onEditorAction(view,actionId,event)}"
                    android:inputType="text"
                    android:singleLine="true"
                    />

            <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recycler_movie"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="@dimen/margin_normal"
                    app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                    app:spanCount="2"
                    tools:listitem="@layout/item_movie"
                />

        </LinearLayout>


    </FrameLayout>
</layout>
